# keypick

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  DEPLOY_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml  cloudflare-deploy.yml  fly-deploy.yml
api/: __init__.py  config.py  main.py
api/middleware/: error_handler.py  logging.py
api/models/: content.py  crawler_config.py  platform.py  task.py
api/routers/: __init__.py  cookies.py  crawler.py  historical.py  processor.py  tools.py
api/services/: cookie_manager.py  crawler_service.py  dify_service.py  historical_service.py  langfuse_service.py  mediacrawler_adapter.py  mediacrawler_adapter_v2.py  processor_service.py  redis_service.py  supabase_service.py
deploy/: README.md
deploy/cloudflare/: worker.js  wrangler.toml
deploy/fly/: fly.toml
deploy/scripts/: deploy.sh  monitor.sh  rollback.sh
docs/: XIAOHONGSHU_PERMISSION_FIX.md
patches/: optimize_chromium_memory.py
scripts/: fix_xhs_permission.py  update_mediacrawler.py  update_mediacrawler.sh  validate_local.sh
tests/: TEST_GUIDE.md  test_api.py  test_integration.py
